--- a/src/theme/general.css
+++ b/src/theme/general.css
@@ -5,6 +5,16 @@
     background: linear-gradient(to right, rgb(9, 36, 63) 0%,  dodgerblue 50%, rgb(9, 36, 63) 100%);
     --ion-background-color: linear-gradient(to right, rgb(9, 36, 63) 0%,  dodgerblue 50%, rgb(9, 36, 63) 100%);
 }
+.backdrop{
+    position: absolute;
+    z-index: 99999999999999;
+    top: 50%;
+    left: 50%;
+    overflow: auto;
+    transform: translate3d(-50%, -50%, 0);
+    animation: modal 0.3s linear forwards;
+    background-color: rgb(0, 0, 0, 0.50);
+}
 .background-image{
     position: relative;
     width: 100%;
@@ -88,10 +98,24 @@
     right: 0px;
     transform: translateY(-50%);
 }
+.float-bottom-left{
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+}
+.float-bottom-right{
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+}
 .float-bottom-overflow{
     position: absolute;
     bottom: 0;
     transform: translateY(100%);
+}
+.item-center{
+    margin-left: 50%;
+    transform: translateX(-50%);
 }
 .sales-item-header-container{
     
@@ -227,6 +251,9 @@
 .pad-xl{
     padding: 15px;
 }
+.pad-xxl{
+    padding: 30px;
+}
 .pad-v{
     padding-top: 10px;
     padding-bottom: 10px;
@@ -239,6 +266,10 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+.pad-h-xl{
+    padding-left: 25px;
+    padding-right: 25px;
+}
 .border-l-r{
     border-left: 1px solid white;
     border-right: 1px solid white;
@@ -250,10 +281,19 @@
     color: white;
     /*background-color: rgb(48, 46, 46);*/
     background: linear-gradient(to bottom, rgb(95, 95, 95) 0%, rgb(5, 5, 5) 100%);
+    --ion-background-color: linear-gradient(to bottom, rgb(95, 95, 95) 0%, rgb(5, 5, 5) 100%);
+}
+.dark-r{
+    color: white;
+    background: linear-gradient(to right, rgb(95, 95, 95) 0%, rgb(5, 5, 5) 100%);
+    --ion-background-color: linear-gradient(to v, rgb(95, 95, 95) 0%, rgb(5, 5, 5) 100%);
 }
 .dark-hover:hover{
-    /*background-color: rgb(82, 79, 79);*/
     background: linear-gradient(to bottom, rgb(117, 114, 114) 0%, rgb(36, 35, 35) 100%);
+}
+.silver{
+    background: linear-gradient(to right, gray 0%, white 50%, gray 100%);
+    --ion-background-color: linear-gradient(to right, gray 0%, white 50%, gray 100%);
 }
 .success{
     color: white;
@@ -285,13 +325,17 @@
     background: linear-gradient(to bottom, rgb(19, 192, 250)0%, rgb(1, 41, 54)100%);
 }
 .dark-blue:hover{
+    color: orange;
     text-shadow: 1px 1px 1px black;
-    background-color: rgb(61, 88, 105);
 }
 .teal{
     color: white;
     /*background-color: rgb(5, 80, 80);*/
     background: linear-gradient(to bottom, rgb(5, 80, 80) 0%, rgb(0, 36, 36) 100%);
+}
+.input-style{
+    color: white;
+    background: linear-gradient(to bottom, rgb(26, 133, 240) 0%, rgb(9, 36, 63) 100%);
 }
 .teal:hover{
     background-color: rgb(6, 92, 92);
@@ -308,6 +352,10 @@
 .font-mini{
     font-size: 14px;
 }
+.font-xl{
+    font-size: 20px;
+    font-weight: bold;
+}
 .customer-image-icon{
     font-size: 50px;
     border: 1px solid white;
@@ -323,6 +371,16 @@
 }
 .click:active{
     transform: scale(1.02);
+}
+.close{
+    position: absolute;
+    z-index: 999999999999999;
+    top: 5px;
+    right: 5px;
+    font-size: 25px;
+}
+.close:hover{
+    color: orangered;
 }
 .close-hover:hover{
     color: orangered;
@@ -391,7 +449,8 @@
     --ion-background-color: linear-gradient(to bottom, dodgerblue 0%, rgb(9, 36, 63) 100%);
 }
 .menu-button-selected{
-    border-right: 5px solid white;
+    color: orange;
+    /*border-left: 5px solid white;*/
 }
 .menu-button ion-icon{
     color: white;
@@ -491,5 +550,150 @@
 .hamburger-menu:active{
     box-shadow: 1px 1px 2px rgb(9, 36, 63);
 }
-
-
+.entry-input-container{
+    padding: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    color: white;
+    border-radius: 50px;
+    margin-bottom: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.input{
+    outline: none;
+    padding: 7px;
+    width: 100%;
+    border-radius: 50px;
+    color: black;
+    border: 1px solid rgb(167, 165, 165);
+}
+.popup-bg{
+    color: white;
+    background: linear-gradient(to bottom, rgb(26, 133, 240) 0%, rgb(9, 36, 63) 100%);
+    --ion-background-color: linear-gradient(to bottom, rgb(26, 133, 240) 0%, rgb(9, 36, 63) 100%);
+}
+.link{
+    color: gray;
+    cursor: pointer;
+}
+.link:hover{
+    text-decoration: underline;
+}
+.add-product-pop-thumbnail{
+    position: relative;
+    width: 100%;
+    height: 350px;
+    padding: 10px;
+}
+.add-product-pop-thumbnail:hover{
+    background-color: lightgray;
+}
+.add-image-icon{
+    margin: 15px;
+    padding: 5px;
+    font-size: 30px;
+    border-radius: 50%;
+    user-select: none;
+    box-shadow: 1px 1px 2px black;
+    background-color: white;
+}
+.popup-header{
+    position: relative;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 20px;
+    color: white;
+}
+.dollar-sign{
+    position: relative;
+}
+.dollar-sign input{
+    padding-left: 13px;
+}
+.dollar-sign::after{
+    position: absolute;
+    content: "$";
+    top: 50%;
+    left: 5px;
+    color: black;
+    transform: translateY(-50%);
+}
+.scrollbar::-webkit-scrollbar{
+    width: 10px;
+    height: 10px;
+    background: linear-gradient(to right, dodgerblue 0%, rgb(1, 18, 34) 100%);
+}
+.scrollbar::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    border: 1px solid gray;
+    background: linear-gradient(to right, lightgray 0%, rgb(22, 22, 22) 100%);
+}
+.scrollbar::-webkit-scrollbar-button{
+    color: black;
+    height: 10px;
+    border-radius: 50%;
+    background: linear-gradient(to right, lightgray 0%, rgb(22, 22, 22) 100%);
+}
+.btn-font{
+    font-size: 15px;
+}
+.radius{
+    border-radius: 5px;
+}
+.pointer{
+    cursor: pointer;
+}
+.popup-container{
+    position: relative;
+    width: 50%;
+    height: 60vh;
+    min-height: 600px;
+}
+.entry-action-sub{
+    width: 100%;
+    height: 65%;
+    user-select: none;
+    padding-left: 20px;
+    padding-right: 20px;
+    background: inherit;
+}
+.entry-action-mini{
+    height: 85%;
+    padding: 5px;
+    overflow-y: auto;
+    border-radius: 5px;
+    box-shadow: 1px 1px 5px white;
+}
+.entry-action-add-btn{
+    font-size: 30px;
+    float: right;
+    color: white;
+    margin-bottom: 10px;
+}
+.customer-item-container{
+    margin-bottom: 5px;
+}
+.customer-item-container:hover{
+    color: orange;
+}
+.alert-container{
+    width: 300px;
+    border-radius: 5px;
+    padding: 20px;
+    user-select: none;
+}
+.alert-container button{
+    box-shadow: 1px 1px 5px black;
+    margin-left: 10px;
+}
+.alert-container button:active{
+    box-shadow: 1px 1px 2px black;
+}
+.refund-container{
+    width: 95%;
+    height: 70%;
+    padding: 20px;
+    margin-top: 10px;
+    box-shadow: 1px 1px 5px black;
+}
