--- a/src/theme/actions.css
+++ b/src/theme/actions.css
@@ -1,3 +1,6 @@
+
+
+
 @keyframes modal{
     0%{
         width: 0%;
@@ -6,5 +9,23 @@
     100%{
         width: 100%;
         height: 100vh;
+    }
+}
+
+@keyframes jump{
+    0%{
+        top: -25%;
+    }
+    100%{
+        top: 100%;
+    }
+}
+
+@keyframes spin{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
     }
 }
