--- a/src/theme/general.css
+++ b/src/theme/general.css
@@ -777,3 +777,32 @@
     color: white;
     animation: spin 1s infinite;
 }
+.singup-btn{
+    margin-top: 30px;
+}
+.singup-btn label{
+    padding: 5px;
+    border-radius: 5px;
+    color: white;
+    background-color: rgb(0, 0, 0, 0.5);
+}
+.singup-btn label:hover{
+    color: dodgerblue;
+}
+.cart-item-hover:hover div{
+    color: white;
+    border: 1px solid gray;
+    background-color: gray;
+}
+.cart-item-hover:hover span{
+    display: block;
+}
+.cart-qty-item-hover:hover input{
+    color: dodgerblue;
+    text-align: center;
+    border-radius: 15px;
+    background-color: white;
+}
+.hide{
+    display: none;
+}
