--- a/src/theme/responsive.css
+++ b/src/theme/responsive.css
@@ -76,21 +76,6 @@
         height: 90vh;
         bottom: 0;
     }
-    .toggle-prod-and-order-entry{
-        position: absolute;
-        z-index: 999;
-        top: 20px;
-        left: 1px;
-        font-size: 30px;
-        color: white;
-    }
-    .toggle-prod-and-order-entry img{
-        width: 40px;
-        height: 40px;
-        border-top-right-radius: 50%;
-        border-bottom-right-radius: 50%;
-        box-shadow: 1px 1px 20px skyblue;
-    }
     .order-entry-main-container{
         display: block;
         width: 100%;
@@ -119,6 +104,7 @@
     }
     .order-entry-product-sub-container{
         height: auto;
+        padding-bottom: 55px;
     }
     .order-entry-product-mini-container{
         height: 93vh;
@@ -177,11 +163,31 @@
     .scrollbar::-webkit-scrollbar{
         width: 5px;
         height: 5px;
-        background: linear-gradient(to right, dodgerblue 0%, rgb(1, 18, 34) 100%);
+        background: linear-gradient(to right, rgb(238, 236, 236) 0%, rgb(5, 5, 5) 100%);
     }
     .scrollbar2::-webkit-scrollbar{
         width: 5px;
         height: 5px;
-        background: linear-gradient(to right, dodgerblue 0%, rgb(1, 18, 34) 100%);
+        background: linear-gradient(to right, rgb(238, 236, 236) 0%, rgb(5, 5, 5) 100%);
+    }
+    .prod-mobile-bottom-nav{
+        position: fixed;
+        z-index: 999999999999;
+        bottom: 40px;
+        width: 100%;
+        height: 55px;
+    }
+    .cart-mobile-bottom-nav{
+        position: fixed;
+        z-index: 999999999999;
+        bottom: 0px;
+        width: 100%;
+        height: 55px;
+    }
+    .mobile-bottom-nav-icon{
+        font-size: 25px;
+        padding: 8px;
+        border-radius: 50%;
+        border: 1px solid white;
     }
 }
