--- a/src/theme/general.css
+++ b/src/theme/general.css
@@ -47,7 +47,7 @@
     width: 100%;
     min-width: 350px;
     padding: 50px;
-    background-color: rgb(0, 0, 0, 0.30);
+    /*background-color: rgb(0, 0, 0, 0.30);*/
 }
 .login-container ion-item{
     border-radius: 5px;
@@ -145,8 +145,9 @@
 .sales-item-container{
     position: relative;
     height: 50%;
+    max-height: 42vh;
     overflow-y: auto;
-    background-color: lightgray;
+    /*background-color: lightgray;*/
 }
 .sales-item-container::-webkit-scrollbar{
     width: 5px;
@@ -213,6 +214,9 @@
     margin-bottom: -2px;
     user-select: none;
 }
+.sales-item:hover .float-bottom-right{
+    display: block;
+}
 .sales-item-sub{
     position: relative;
     width: 100%;
@@ -263,7 +267,7 @@
     display: flex;
     padding: 5px;
     border-radius: 15px;
-    border: 1px solid lightgray;
+    /*border: 1px solid lightgray;*/
     background-color: white;
     /*background: linear-gradient(to bottom, white 0%, rgb(151, 150, 150) 100%);*/
 }
@@ -335,6 +339,10 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+.pad-h-mini{
+    padding-left: 5px;
+    padding-right: 5px;
+}
 .pad-h-xl{
     padding-left: 25px;
     padding-right: 25px;
@@ -387,6 +395,11 @@
     color: rgb(3, 37, 68);
     background: linear-gradient(to right, lightgray 0%, rgb(95, 95, 95) 100%);
     --ion-background-color: linear-gradient(to right, lightgray 0%, rgb(95, 95, 95) 100%);
+}
+.gray3{
+    color: rgb(3, 37, 68);
+    background: linear-gradient(to right, rgb(95, 95, 95) 0%, white 100%);
+    --ion-background-color: linear-gradient(to right, rgb(95, 95, 95) 0%, white 100%);
 }
 .success{
     color: white;
@@ -463,6 +476,11 @@
     margin-left: 20px;
     padding-right: 20px;
 }
+.more-option-button-conotainer{
+    position: relative;
+    width: 60%;
+    text-align: center;
+}
 .click:active{
     transform: scale(1.02);
 }
@@ -474,7 +492,7 @@
     z-index: 999999999999999;
     top: 5px;
     right: 5px;
-    font-size: 25px;
+    font-size: 20px;
 }
 .close:hover{
     color: orangered;
@@ -497,6 +515,7 @@
 }
 .error{
     color: red;
+    font-size: 15px;
     text-align: center;
 }
 .singin-error{
@@ -1053,4 +1072,32 @@
     height: 35px;
     outline: none;
     border: none;
+}
+.discount-container{
+    width: 330px;
+    height: 200px;
+    overflow-y: auto;
+    padding: 10px;
+    user-select: none;
+}
+.discount-item{
+    width: auto;
+    height: 25px;
+    white-space: nowrap;
+}
+.discount-item:hover{
+    color: white;
+    background-color: rgb(139, 138, 138);
+}
+.settings-discount-container{
+    width: 100%;
+    height: 240px;
+    overflow-y: auto;
+    padding: 10px;
+    text-align: left;
+    margin-bottom: 20px;
+}
+.settings-discount-left-container{
+    width: 100%;
+    text-align: left;
 }
