--- a/src/theme/responsive.css
+++ b/src/theme/responsive.css
@@ -190,4 +190,11 @@
         border-radius: 50%;
         border: 1px solid white;
     }
+    .more-option-button-conotainer{
+        width: 100%;
+    }
+    .more-option-item-container{
+        width: 100%;
+        padding-bottom: 55px;
+    }
 }
