--- a/src/theme/general.css
+++ b/src/theme/general.css
@@ -237,6 +237,21 @@
     text-align: center;
     background-color: white;
 }
+.btn{
+    padding: 8px;
+    color: rgb(2, 26, 48);
+    border-radius: 5px;
+    border: 1px solid lightgray;
+    box-shadow: 1px 1px 3px gray;
+    background: linear-gradient(to right, rgb(175, 174, 174) 0%, white 50%, rgb(175, 174, 174) 100%);
+}
+.btn:hover{
+    background-color: rgb(235, 233, 233);
+}
+.btn:active{
+    transform: scale(1.01);
+    box-shadow: 0px 0px 3px gray;
+}
 .action-btn-container{
     position: relative;
     background-color: rgb(24, 23, 23);
@@ -343,6 +358,10 @@
     padding-left: 5px;
     padding-right: 5px;
 }
+.pad-h-x{
+    padding-left: 15px;
+    padding-right: 15px;
+}
 .pad-h-xl{
     padding-left: 25px;
     padding-right: 25px;
@@ -377,12 +396,12 @@
     background: linear-gradient(to bottom, rgb(117, 114, 114) 0%, rgb(36, 35, 35) 100%);
 }
 .silver{
-    color: rgb(3, 37, 68);
+    color: rgb(2, 26, 48);
     background: linear-gradient(to right, gray 0%, white 50%, gray 100%);
     --ion-background-color: linear-gradient(to right, gray 0%, white 50%, gray 100%);
 }
 .silver2{
-    color: rgb(3, 37, 68);
+    color: rgb(2, 26, 48);
     background: linear-gradient(to bottom, gray 0%, white 50%, gray 100%);
     --ion-background-color: linear-gradient(to right, gray 0%, white 50%, gray 100%);
 }
@@ -664,9 +683,6 @@
 .menu-content-page{
     position: relative;
     width: 80%;
-    /*background-size: cover;
-    background-repeat: no-repeat;
-    background-image: url(../images/beach.jpg);*/
 }
 .menu-toolbar-container{
     width: 85%;
@@ -706,11 +722,28 @@
     border-radius: 50px;
     color: black;
     border: 1px solid rgb(167, 165, 165);
+    background-color: white;
 }
 .popup-bg{
     color: white;
     background: linear-gradient(to bottom, rgb(26, 133, 240) 0%, rgb(9, 36, 63) 100%);
     --ion-background-color: linear-gradient(to bottom, rgb(26, 133, 240) 0%, rgb(9, 36, 63) 100%);
+}
+.bg{
+    color: black;
+    background: linear-gradient(to right, rgb(224, 222, 222) 0%, white 50%, rgb(224, 222, 222) 100%);
+    --ion-background-color: linear-gradient(to bottom, rgb(224, 222, 222) 0%, white 50%, rgb(224, 222, 222) 100%);
+}
+.bg input{
+    border: 1px solid lightgray;
+}
+.bg2{
+    color: black;
+    background: linear-gradient(to bottom, rgb(212, 211, 211) 0%, white 50%, rgb(212, 211, 211) 100%);
+    --ion-background-color: linear-gradient(to bottom, rgb(212, 211, 211) 0%, white 50%, rgb(212, 211, 211) 100%);
+}
+.bg2 input{
+    border: 1px solid lightgray;
 }
 .link{
     color: rgb(61, 60, 60);
@@ -718,6 +751,12 @@
 }
 .link:hover{
     text-decoration: underline;
+}
+.img-hover{
+    border: 5px solid lightgray;
+}
+.img-hover:hover{
+    border: 5px solid gray;
 }
 .add-product-pop-thumbnail{
     position: relative;
@@ -739,6 +778,12 @@
     box-shadow: 1px 1px 2px black;
     color: black;
     background-color: white;
+}
+.header{
+    position: relative;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px;
 }
 .popup-header{
     position: relative;
@@ -845,12 +890,11 @@
     padding: 5px;
     overflow-y: auto;
     border-radius: 5px;
-    box-shadow: 1px 1px 5px white;
+    box-shadow: 1px 1px 5px rgb(0, 0, 0, 0.5);
 }
 .entry-action-add-btn{
     font-size: 30px;
     float: right;
-    color: white;
     margin-bottom: 10px;
 }
 .customer-item-container{
@@ -866,15 +910,13 @@
     width: 25%;
     min-width: 350px;
     border-radius: 5px;
-    padding: 20px;
     user-select: none;
+    padding-bottom: 20px;
 }
 .alert-container button{
-    box-shadow: 1px 1px 5px black;
     margin-left: 10px;
-}
-.alert-container button:active{
-    box-shadow: 1px 1px 2px black;
+    float: right;
+    min-width: 50px;
 }
 .refund-container{
     width: 95%;
@@ -1043,7 +1085,7 @@
     height: 100%;
     color: rgb(5, 5, 5);
     background-color: white;
-    border: 1px solid rgb(5, 5, 5);
+    border: 1px solid gray;
 }
 .number-pad-note{
     resize: none;
@@ -1077,8 +1119,10 @@
     width: 330px;
     height: 200px;
     overflow-y: auto;
+    margin: 10px;
     padding: 10px;
     user-select: none;
+    border: 2px solid lightgray;
 }
 .discount-item{
     width: auto;
