--- a/src/theme/general.css
+++ b/src/theme/general.css
@@ -47,7 +47,7 @@
     width: 100%;
     min-width: 350px;
     padding: 50px;
-    /*background-color: rgb(0, 0, 0, 0.30);*/
+    background-color: rgb(0, 0, 0, 0.30);
 }
 .login-container ion-item{
     border-radius: 5px;
@@ -542,7 +542,7 @@
     width: 100%;
     text-align: center;
     padding: 5px;
-    text-shadow: 1px 1px 1px black;
+    text-shadow: 1px 1px 1px rgb(116, 3, 3);
 }
 .menu-caintainer{
     position: absolute;
@@ -606,6 +606,7 @@
 }
 .item-container{
     padding: 50px;
+    word-wrap: normal;
     user-select: none;
     background-color: transparent;
 }
@@ -749,8 +750,8 @@
 }
 .bg2{
     color: black;
-    background: linear-gradient(to bottom, rgb(228, 227, 227) 0%, white 50%, rgb(228, 227, 227) 100%);
-    --ion-background-color: linear-gradient(to bottom, rgb(228, 227, 227) 0%, white 50%, rgb(228, 227, 227) 100%);
+    background: linear-gradient(to bottom, rgb(245, 243, 243) 0%, white 50%, rgb(245, 243, 243) 100%);
+    --ion-background-color: linear-gradient(to bottom, rgb(245, 243, 243) 0%, white 50%, rgb(245, 243, 243) 100%);
 }
 .bg2 input{
     border: 1px solid lightgray;
@@ -1051,6 +1052,9 @@
 .menu-bar-btn-container{
     width: 70px;
 }
+.menu-bar-children-btn-container{
+    width: 94.5%;
+}
 .teal-c{
     color: teal;
 }
@@ -1138,7 +1142,8 @@
 }
 .discount-item{
     width: auto;
-    height: 25px;
+    padding-top: 3px;
+    padding-bottom: 3px;
     white-space: nowrap;
 }
 .discount-item:hover{
