--- a/src/theme/actions.css
+++ b/src/theme/actions.css
@@ -30,3 +30,11 @@
     }
 }
 
+@keyframes blink{
+    0%{
+        background-color: red;
+    }
+    100%{
+        background-color: blue;
+    }
+}
