--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -74,6 +74,11 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /* custome variables*/
+  --bg-color: rgb(207, 205, 205);
+  --bg-text-color: rgb(5, 5, 5);
+  --border-heilight: orange;
 }
 
 @media (prefers-color-scheme: dark) {
