--- a/src/theme/actions.css
+++ b/src/theme/actions.css
@@ -38,3 +38,14 @@
         background-color: blue;
     }
 }
+
+@keyframes shack{
+    0%{
+        transform: scale(1);
+        border: 1px solid red;
+    }
+    100%{
+        transform: scale(0.9);
+        border: 1px solid red;
+    }
+}
